# stream-benchmark

./: .gitignore  CMakeLists.txt  HISTORY.txt  LICENSE  Makefile  README.md
scripts/: runGCP.sh  runLocal.sh  runRemote.sh  runStream.sh
src/: mysecond.c  stream.c  stream_mpi.c
